--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "meteor-node-stubs": "^0.2.3",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "twitter": "^1.3.0"
   }
 }
